<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scrum Cards</string>

    <string name="menu_theme">Theme</string>
    <string name="menu_information">Information</string>
    <string name="menu_preferences">Preferences</string>

    <string name="theme">Theme</string>
    <string name="theme_color_background">Background (border) color</string>
    <string name="theme_color_card">Card color</string>
    <string name="theme_color_text">Text color</string>
    <string name="theme_full_card_with_border">Show border in full card view</string>
    <string name="theme_current">Current theme: %1$s</string>
    <string name="theme_default">Default</string>
    <string name="theme_save">Save</string>
    <string name="theme_load">Load</string>
    <string name="theme_delete">Delete</string>
    <string name="theme_insert_name">Insert theme name</string>
    <string name="theme_choose_to_load">Choose theme to load</string>
    <string name="theme_choose_to_delete">Choose theme to delete</string>
    <string name="theme_customized_not_saved">Customized - not saved</string>

    <string name="theme_info_update_to_default">Theme update to default.</string>
    <string name="theme_info_saved">Theme saved.</string>
    <string name="theme_info_not_saved">Error saving theme.</string>
    <string name="theme_info_loaded">Theme loaded.</string>
    <string name="theme_info_deleted">Theme deleted.</string>
    <string name="theme_info_not_deleted">Error deleting theme.</string>

    <string name="information">About Scrum Cards</string>
    <string name="info_desc1">This is a simple set of scrum cards.</string>
    <string name="info_features">Features:</string>
    <string name="info_features1">- Select the card for voting and swipe for returning to card select</string>
    <string name="info_features2">- Scroll cards</string>
    <string name="info_features3">- Fullscreen</string>
    <string name="info_features4">- Keep screen on</string>
    <string name="info_features5">- Color themes (default, save, load, delete)</string>

    <string name="preferences">Scrum Cards Preferences</string>
    <string name="preference_scroll_cards_tittle">Scrolls cards</string>
    <string name="preference_scroll_cards_description">Scroll cards on horizontal swype</string>
    <string name="preference_fullscreen">Fullscreen</string>
    <string name="preference_keep_screen_on">Keep screen on</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>