<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main_window" android:padding="5dp" >

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/theme" android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_color_background" android:text="@string/theme_color_background"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_color_card" android:text="@string/theme_color_card"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_color_text" android:text="@string/theme_color_text"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_theme_reset" android:text="@string/theme_reset"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_theme_save" android:text="@string/theme_save"/>
    <Button style="@style/theme_color_button" android:id="@+id/button_theme_load" android:text="@string/theme_load"/>
</LinearLayout>
