<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences">
    <CheckBoxPreference android:title="@string/preference_scroll_cards_tittle"
                        android:summary="@string/preference_scroll_cards_description"
                        android:defaultValue="false"
                        android:key="scroll_cards"/>
    <CheckBoxPreference android:title="@string/preference_fullscreen"
                        android:defaultValue="false"
                        android:key="fullscreen"/>
    <CheckBoxPreference android:title="@string/preference_keep_screen_on"
                        android:defaultValue="false"
                        android:key="keep_screen_on"/>
    <ListPreference android:title="@string/preference_theme"
                    android:defaultValue="default"
                    android:key="theme"
                    android:entries="@array/theme_names"
                    android:entryValues="@array/theme_keys" />
  </PreferenceCategory>
</PreferenceScreen>
